--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,8 +11,7 @@
 }
 #block-right{
     width: 220px;
-    height: 400px;
-    border: 1px solid black;
+    height: auto;
     float:right;
 }
 #block-content{
@@ -30,6 +29,8 @@
     height: 160px;
     margin-top: 10px;
     border: 1px solid black;
+    clear: both;
+    clear: both;
 }
 #header-top-menu li{
     font: 15px sans-serif;
@@ -119,3 +120,273 @@
     margin-top: -45px;
     position: absolute;
 }
+#block-search{
+    width: 345px;
+    height: auto;
+    margin-left: 700px;
+    margin-top: 23px;
+}
+#block-search span{
+    width: 13px;
+    height: 13px;
+    background: url(/images/icon-search.png);
+    position: absolute;
+    margin-top: 9px;
+    margin-left: 6px;
+}
+#block-search input#input-search{
+    border: 1px solid #E1E1E2;
+    width: 250px;
+    height: 26px;
+    font: 14px sans-serif;
+    padding-left: 25px;
+}
+#button-search {
+    border: 1px solid #E1E1E2;
+    width: 58px;
+    height: 31px;
+    background: url(/images/grd-button-search-norm.png);
+    margin-left: -5px;
+    cursor: pointer;
+}
+#button-search:hover {
+    background: url(/images/grd-button-search-hover.png);
+}
+#top-menu{
+    width: 1033px;
+    height: 45px;
+    margin-top: 5px;
+}
+#top-menu li{
+    float: left;
+    margin-left: 10px;
+    margin-top: 8px;
+    list-style-type: none;
+}
+#top-menu a{
+    font: 15px sans-serif;
+    color: #34659D;
+    margin-left: 4px;
+    margin-right: 3px;
+    text-decoration: none;
+    border-bottom: 1px dashed #34659D;
+}
+#top-menu a:hover{
+    color: #EF662B;
+    border-bottom: 1px dashed #EF662B;
+}
+#top-menu img{
+    float: left;
+    margin-top: -7px;
+}
+#block-basket{
+    margin-top: 0px;
+    padding-top: 7px;
+    margin-right: -3px;
+}
+#block-basket a{
+    font: bold 15px sans-serif;
+    text-decoration: none;
+    margin-left: 40px;
+    border-bottom: 1px dashed #34659D;
+    color: black;
+}
+#block-basket a:hover{
+    border-bottom: none;
+}
+#block-basket img{
+    position: absolute;
+    margin-top: -3px;
+}
+#nav-line{
+    background: url(/images/line.png);
+    width: 1035px;
+    height: 5px;
+    margin-top: -3px;
+}
+#block-category{
+    width: 220px;
+    height: auto;
+}
+.header-title{
+    width: 210px;
+    font: 14px sans-serif;
+    margin-top: 0px;
+    padding-left: 10px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    color: white;
+    background: url("/images/grd-title.png");
+    border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+}
+#block-category li{
+    margin-left: -40px;
+    list-style-type: none;
+}
+#block-category > ul > li{
+    border-bottom: 1px solid #EFEFEF;
+}
+#block-category > ul > li > a{
+    font: 15px sans-serif;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 30px;
+    display: block;
+    cursor: pointer;
+}
+#block-category > ul > li > a:hover{
+    background-color: #EEEEEE;
+}
+#mobile-images{
+    position: absolute;
+    margin-left: -26px;
+    margin-top: -3px;
+}
+#book-images{
+    position: absolute;
+    margin-left: -30px;
+    margin-top: -2px;
+}
+#table-images{
+    position: absolute;
+    margin-left: -30px;
+}
+.category-section{
+    margin-left: 25px;
+    margin-bottom: 5px;
+}
+.category-section li{
+    margin-top: 3px;
+}
+.category-section a{
+    font: 15px sans-serif;
+    text-decoration: none;
+    color: black;
+}
+.category-section a:hover{
+    text-decoration: underline;
+}
+#block-parameter{
+    width: 220px;
+    margin-top: 10px;
+    height: auto;
+}
+.title-filter{
+    font: bold 14px sans-serif;
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+#block-input-price ul{
+    list-style-type: none;
+    margin-left: -40px;
+}
+#block-input-price li{
+    margin-left: 10px;
+    float: left;
+}
+#block-input-price input{
+    width: 45px;
+    height: 20px;
+    font: 14px sans-serif;
+    border: 1px solid #DCDCDC;
+    padding-left: 3px;
+}
+#block-input-price p{
+    font: 14px sans-serif;
+    float:left;
+    margin-top: 0px;
+    padding-top: 2px;
+}
+#blocktrackbar{
+    width: 220px;
+    height: 20px;
+    border: 1px solid black;
+    margin-top: 20px;
+    clear: both;
+}
+.checkboxbrand li{
+    list-style-type: none;  
+    font: 14px sans-serif;
+    margin-left: -35px;
+    margin-top: 3px; 
+}
+.checkboxbrand input{
+    margin-right: 8px; 
+}
+#button-param-search{
+    width: 81px;
+    height: 27px;
+    background: url("/images/button-search-norm.png");
+    border: none;
+    cursor: pointer;
+}
+#button-param-search:hover{
+    background: url("/images/button-search-hover.png");
+}
+#button-param-search:active{
+    background: url("/images/button-search-active.png");
+}
+#block-news{
+    width: 220px;
+    height: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+#newsticker{
+    width: 220px;
+    border-top: 1px solid #DDDDDD;
+}
+#newsticker p{
+    font: 14px sans-serif;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+#newsticker li{
+    position: relative;
+    display: inline-block;
+    list-style: none;
+    border-bottom: 1px solid #DDDDDD;
+    padding-top: 15px;
+    padding-bottom: 20px;
+}
+#newsticker li:first-child{
+    margin-left: -40px;
+}
+#newsticker a{
+    color: #EF662B;
+    font: bold 14px sans-serif;
+    text-decoration: none;
+}
+#newsticker a:hover{
+    text-decoration: underline;
+}
+#newsticker span{
+    font: 13px sans-serif;
+    padding-bottom: 5px;
+    color: #636363;
+    display: block;
+}
+#news-prev{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+#news-next{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
